--- a/src/scss/_custom-style.scss
+++ b/src/scss/_custom-style.scss
@@ -6,3 +6,13 @@
     margin-bottom: 15px;
   }
 }
+
+//Main style
+main{
+  padding-left: $asideWidth;
+  padding-top: 60px;
+}
+
+.links .table{
+  margin: $defaultIndent 0;
+}
