--- a/src/scss/_default-classes.scss
+++ b/src/scss/_default-classes.scss
@@ -1,3 +1,38 @@
+// Text classes
 .text-bold{
   font-weight: $fontBold;
 }
+.text-center{
+  text-align: center;
+}
+
+//class position fixed
+.fixed-to-top{
+  position: fixed;
+  z-index: 99;
+  top: 0;
+}
+
+//class flexbox
+.flex-container{
+  display: flex;
+}
+.align-items-center{
+  align-items: center;
+}
+.justify-content-sb{
+  justify-content: space-between;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
