--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -6,10 +6,11 @@
 body{
   margin: 0;
   color: $black;
-  font: $fontFamily;
+  font-family: $fontFamily;
   font-size: $fontSize;
   line-height: $lineHeight;
   font-weight: $fontLight;
+  background-color: $xsLightGrey;
 }
 h1, h2, h3, h4, h5, h6, p{
   margin: 0;
