--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,1 +1,262 @@
-*{-webkit-box-sizing:border-box;box-sizing:border-box}body{margin:0;color:#333;font-family:"Roboto",sans-serif;font-size:14px;line-height:1;font-weight:300;background-color:#f5f5f2}h1,h2,h3,h4,h5,h6,p{margin:0}ul,ol{margin:0;padding:0;list-style:none}a{color:inherit;text-decoration:none}img{max-width:100%}input,textarea,button{outline:none;border:none}textarea{resize:vertical}button{cursor:pointer}label{margin-bottom:0}select,select:hover{color:inherit;background:#fff}option,option:hover{color:inherit;background:#fff}.text-bold{font-weight:700}.text-center{text-align:center}.fixed-to-top{position:fixed;z-index:99;top:0}.flex-container{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}.align-items-center{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.justify-content-sb{-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between}.section-title,.page-title{color:#a6a6a6;font-size:16px;font-weight:700}.page-title{text-transform:uppercase}.page-title .small-title{font-size:14px}.link{font-size:13px;color:#56819f}.link.large-link{font-size:16px}.link:hover{color:#ffa200}.btn{padding:12px 22px;font-size:18px;color:#fff;-webkit-border-radius:2px;border-radius:2px;display:inline-block}.btn+btn{margin-left:18px}.btn.btn-default{background-color:#979797}.btn.btn-default:hover{background-color:#bababa}.btn.btn-action{background-color:#f58220}.btn.btn-action:hover{background-color:#ffa200}.btn.btn-disabled{background-color:#e3e3e3;cursor:not-allowed}.btn.btn-disabled:hover{background-color:#e3e3e3}.table{border-collapse:collapse;font-size:13px}.table.full-width{width:100%}.table tbody tr:last-child td{border-bottom:1px solid #e3e3e3}.table tbody tr:hover{background-color:#f1f3f3}.table tr th{padding:30px 18px;color:#bababa}.table tr td{border-top:1px solid #e3e3e3;padding:18px}.table tr.td-title{font-size:16px;color:#bababa}.table .table-sort{color:#333;padding:8px 10px;margin:-8px -10px;-webkit-border-radius:2px;border-radius:2px;cursor:pointer}.table .table-sort:hover{background-color:#f5f5f2;color:#333}.pagination li.active a,.pagination li a:hover{background-color:#f5f5f2;color:#979797;-webkit-border-radius:2px;border-radius:2px}.pagination li{display:inline-block}.pagination li a{display:inline-block;padding:18px}.container-fluid{padding:18px}.container-sm{max-width:684px;margin:0 auto}.header{background-color:#fff;border-bottom:1px solid #e3e3e3;right:0;left:0;height:60px}.aside .aside-menu ul li.active a,.aside .aside-menu ul li a:hover{background-color:#282828;color:#ffffff;border-left-color:#f58220}.aside{background-color:#191919;width:188px;height:100vh;left:0;z-index:100;overflow-y:auto}.aside .menu-control{padding:18px}.aside .menu-control .menu-btn{cursor:pointer}.aside .menu-control .menu-btn span{display:block;width:18px;height:2px;background-color:#979797}.aside .menu-control .menu-btn span+span{margin-top:5px}.aside .aside-menu ul li{color:#979797}.aside .aside-menu ul li a{display:block;padding:14px;border-left:4px solid transparent}.aside .your-manager{padding:27px 18px;border-top:#979797}.aside .your-manager .manager-info{margin-top:18px}.aside .your-manager .manager-info .manager-photo{position:relative;margin-right:10px}.aside .your-manager .manager-info .manager-photo .status{width:11px;height:11px;-webkit-border-radius:50%;border-radius:50%;position:absolute;right:0;top:0}.aside .your-manager .manager-info .manager-photo .status.online{background-color:#04ae00}.aside .your-manager .manager-info .manager-photo .status.offline{background-color:red}.content-wrapper{padding:18px;height:-webkit-calc(100vh - 60px);height:calc(100vh - 60px);overflow-y:auto}.panel{background-color:#fff;-webkit-box-shadow:0 0 10px 0 rgba(0,0,0,0.1);box-shadow:0 0 10px 0 rgba(0,0,0,0.1)}.panel+.panel{margin-top:18px}.panel .panel-header{border-bottom:1px solid #e3e3e3;padding:18px}.panel .panel-body{padding:18px}.guide-wrap{padding:20px}.guide-wrap>*{margin-bottom:15px}main{padding-left:188px;padding-top:60px}.links .table{margin:18px 0}h1{color:#000;font-size:3em}
+/* RESET START */
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body {
+  margin: 0;
+  color: #333;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1;
+  font-weight: 300;
+  background-color: #f5f5f2; }
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0; }
+
+ul, ol {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+a {
+  color: inherit;
+  text-decoration: none; }
+
+img {
+  max-width: 100%; }
+
+input, textarea, button {
+  outline: none;
+  border: none; }
+
+textarea {
+  resize: vertical; }
+
+button {
+  cursor: pointer; }
+
+label {
+  margin-bottom: 0; }
+
+select, select:hover {
+  color: inherit;
+  background: #fff; }
+
+option, option:hover {
+  color: inherit;
+  background: #fff; }
+
+/* RESET END */
+.text-bold {
+  font-weight: 700; }
+
+.text-center {
+  text-align: center; }
+
+.fixed-to-top {
+  position: fixed;
+  z-index: 99;
+  top: 0; }
+
+.flex-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.align-items-center {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.justify-content-sb {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.section-title, .page-title {
+  color: #a6a6a6;
+  font-size: 16px;
+  font-weight: 700; }
+
+.page-title {
+  text-transform: uppercase; }
+  .page-title .small-title {
+    font-size: 14px; }
+
+.link {
+  font-size: 13px;
+  color: #56819f; }
+  .link.large-link {
+    font-size: 16px; }
+  .link:hover {
+    color: #ffa200; }
+
+.btn {
+  padding: 12px 22px;
+  font-size: 18px;
+  color: #fff;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  display: inline-block; }
+  .btn + btn {
+    margin-left: 18px; }
+  .btn.btn-default {
+    background-color: #979797; }
+    .btn.btn-default:hover {
+      background-color: #bababa; }
+  .btn.btn-action {
+    background-color: #f58220; }
+    .btn.btn-action:hover {
+      background-color: #ffa200; }
+  .btn.btn-disabled {
+    background-color: #e3e3e3;
+    cursor: not-allowed; }
+    .btn.btn-disabled:hover {
+      background-color: #e3e3e3; }
+
+.table {
+  border-collapse: collapse;
+  font-size: 13px; }
+  .table.full-width {
+    width: 100%; }
+  .table tbody tr:last-child td {
+    border-bottom: 1px solid #e3e3e3; }
+  .table tbody tr:hover {
+    background-color: #f1f3f3; }
+  .table tr th {
+    padding: 30px 18px;
+    color: #bababa; }
+  .table tr td {
+    border-top: 1px solid #e3e3e3;
+    padding: 18px; }
+  .table tr.td-title {
+    font-size: 16px;
+    color: #bababa; }
+  .table .table-sort {
+    color: #333;
+    padding: 8px 10px;
+    margin: -8px -10px;
+    -webkit-border-radius: 2px;
+            border-radius: 2px;
+    cursor: pointer; }
+    .table .table-sort:hover {
+      background-color: #f5f5f2;
+      color: #333; }
+
+.pagination li.active a, .pagination li a:hover {
+  background-color: #f5f5f2;
+  color: #979797;
+  -webkit-border-radius: 2px;
+          border-radius: 2px; }
+
+.pagination li {
+  display: inline-block; }
+  .pagination li a {
+    display: inline-block;
+    padding: 18px; }
+
+.container-fluid {
+  padding: 18px; }
+
+.container-sm {
+  max-width: 684px;
+  margin: 0 auto; }
+
+.header {
+  background-color: #fff;
+  border-bottom: 1px solid #e3e3e3;
+  right: 0;
+  left: 0;
+  height: 60px; }
+
+.aside .aside-menu ul li.active a, .aside .aside-menu ul li a:hover {
+  background-color: #282828;
+  color: #ffffff;
+  border-left-color: #f58220; }
+
+.aside {
+  background-color: #191919;
+  width: 188px;
+  height: 100vh;
+  left: 0;
+  z-index: 100;
+  overflow-y: auto; }
+  .aside .menu-control {
+    padding: 18px; }
+    .aside .menu-control .menu-btn {
+      cursor: pointer; }
+      .aside .menu-control .menu-btn span {
+        display: block;
+        width: 18px;
+        height: 2px;
+        background-color: #979797; }
+        .aside .menu-control .menu-btn span + span {
+          margin-top: 5px; }
+  .aside .aside-menu ul li {
+    color: #979797; }
+    .aside .aside-menu ul li a {
+      display: block;
+      padding: 14px;
+      border-left: 4px solid transparent; }
+      .aside .aside-menu ul li a .icon {
+        font-size: 17px;
+        margin-right: 15px; }
+  .aside .your-manager {
+    padding: 27px 18px;
+    border-top: #979797; }
+    .aside .your-manager .manager-info {
+      margin-top: 18px; }
+      .aside .your-manager .manager-info .manager-photo {
+        position: relative;
+        margin-right: 10px; }
+        .aside .your-manager .manager-info .manager-photo .status {
+          width: 11px;
+          height: 11px;
+          -webkit-border-radius: 50%;
+                  border-radius: 50%;
+          position: absolute;
+          right: 0;
+          top: 0; }
+          .aside .your-manager .manager-info .manager-photo .status.online {
+            background-color: #04ae00; }
+          .aside .your-manager .manager-info .manager-photo .status.offline {
+            background-color: #ff0000; }
+
+.content-wrapper {
+  padding: 18px;
+  height: -webkit-calc(100vh - 60px);
+  height: calc(100vh - 60px);
+  overflow-y: auto; }
+
+.panel {
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
+  .panel + .panel {
+    margin-top: 18px; }
+  .panel .panel-header {
+    border-bottom: 1px solid #e3e3e3;
+    padding: 18px; }
+  .panel .panel-body {
+    padding: 18px; }
+
+.guide-wrap {
+  padding: 20px; }
+  .guide-wrap > * {
+    margin-bottom: 15px; }
+
+main {
+  padding-left: 188px;
+  padding-top: 60px; }
+
+.links .table {
+  margin: 18px 0; }
+
+h1 {
+  color: #000;
+  font-size: 3em; }
