--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -228,7 +228,10 @@
           display: block;
           padding: 14px;
           border-left: 4px solid transparent;
-          
+          .icon{
+            font-size: 17px;
+            margin-right: 15px;
+          }
           &:hover{
             @extend %activeLink
           }
