--- a/app/css/style.css
+++ b/app/css/style.css
@@ -167,6 +167,10 @@ option, option:hover {
   max-width: 684px;
   margin: 0 auto; }
 
+.row {
+  margin-left: -18px;
+  margin-right: -18px; }
+
 .header {
   background-color: #fff;
   border-bottom: 1px solid #e3e3e3;
@@ -243,7 +247,43 @@ option, option:hover {
     border-bottom: 1px solid #e3e3e3;
     padding: 18px; }
   .panel .panel-body {
-    padding: 18px; }
+    padding: 0 18px; }
+  .panel .panel-form {
+    padding: 40px 0;
+    border-bottom: 1px solid #e3e3e3;
+    text-align: center; }
+    .panel .panel-form form {
+      width: 455px;
+      display: inline-block; }
+      .panel .panel-form form .form-control {
+        width: 310px; }
+      .panel .panel-form form .label-group + .label-group {
+        margin-top: 15px; }
+  .panel .panel-footer {
+    padding: 30px 0; }
+
+.form-control {
+  border: 1px solid #e3e3e3;
+  height: 40px;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  padding: 6px 18px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300; }
+
+.label-group {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .guide-wrap {
   padding: 20px; }
