делаем адаптивное меню и range-слайдер

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -844,7 +844,7 @@ option, option:hover {
   -webkit-border-radius: 2px;
           border-radius: 2px;
   display: inline-block; }
-  .btn + btn {
+  .btn + .btn {
     margin-left: 18px; }
   .btn.btn-default {
     background-color: #979797; }
@@ -1059,22 +1059,65 @@ option, option:hover {
     border-bottom: 1px solid #e3e3e3; }
   .modal .modal-body {
     padding: 0 18px; }
-    .modal .modal-body form {
-      padding: 25px 0; }
-      .modal .modal-body form .label-group + .label-group {
-        margin-left: 18px; }
-      .modal .modal-body form .label-group label {
-        font-weight: 700;
-        display: block;
-        padding-bottom: 18px; }
+  .modal .modal-footer {
+    padding: 18px;
+    border-top: 1px solid #e3e3e3; }
+
+input[type="checkbox"] {
+  display: none; }
+  input[type="checkbox"] + label {
+    font-size: 14px;
+    color: #333;
+    cursor: pointer; }
+    input[type="checkbox"] + label::before {
+      content: '';
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      border: 1px solid #e3e3e3;
+      background-color: #fff;
+      margin-right: 16px; }
+  input[type="checkbox"]:checked + label::before {
+    background: #04ae00 url("../img/checkbox-bg.png") no-repeat center; }
+
+input[type="radio"] {
+  display: none; }
+
+.checkbox-wrap {
+  padding: 30px 0; }
+  .checkbox-wrap .checkboxes {
+    padding-top: 30px; }
+    .checkbox-wrap .checkboxes .scrollbar-inner {
+      height: 150px;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap;
+      padding-right: 20px; }
+  .checkbox-wrap .checkbox-group {
+    padding: 12px;
+    margin-right: 18px; }
+    .checkbox-wrap .checkbox-group:hover {
+      background-color: #f5f5f2; }
+    .checkbox-wrap .checkbox-group .icon {
+      margin-left: auto; }
 
 #add-links-modal {
   width: 1075px; }
+  #add-links-modal .checkbox-group {
+    width: 30%; }
+
+#custom-hadle {
+  top: 12px; }
+  #custom-hadle span {
+    position: absolute;
+    top: 150%; }
 
 .guide-wrap {
   padding: 20px; }
   .guide-wrap > * {
     margin-bottom: 15px; }
+  .guide-wrap.range-slider-wrap {
+    height: 100px; }
 
 main {
   padding-left: 188px;
@@ -1082,3 +1125,39 @@ main {
 
 .links .table {
   margin: 18px 0; }
+
+.generate-links-form .form-control {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin-right: 16px; }
+
+._mobileSidebar main {
+  padding-left: 60px; }
+
+._mobileSidebar .aside {
+  width: 60px;
+  overflow-y: visible; }
+
+._mobileSidebar .logo {
+  display: none; }
+
+._mobileSidebar .aside-menu a .icon {
+  margin-right: 0; }
+
+._mobileSidebar .aside-menu a .menu-link {
+  display: none; }
+
+._mobileSidebar .your-manager {
+  padding-left: 5px;
+  padding-right: 5px; }
+  ._mobileSidebar .your-manager .page-title {
+    display: none; }
+  ._mobileSidebar .your-manager .manager-info .manager-photo {
+    margin-right: 0; }
+    ._mobileSidebar .your-manager .manager-info .manager-photo img {
+      width: 40px;
+      height: 40px; }
+  ._mobileSidebar .your-manager .manager-info .link {
+    display: none; }
