--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -41,7 +41,7 @@
   border-radius: 2px;
   display: inline-block;
 
-  & + btn{
+  & + .btn{
     margin-left: $defaultIndent;
   }
 
@@ -391,26 +391,94 @@
 
   .modal-body{
     padding: 0 $defaultIndent;
+  }
+  .modal-footer{
+    padding: $defaultIndent;
+    border-top: 1px solid $lightGrey;
+  }
+}
 
-    form{
-      padding: 25px 0;
+//checkbox and radio btn
+input{
 
-      .label-group{
+  &[type="checkbox"]{
+    display: none;
+    
+    & + label{
+      font-size: 14px;
+      color: $black;
+      cursor: pointer;
 
-        & + .label-group{
-          margin-left: $defaultIndent;
-        }
+      &::before{
+        content: '';
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        border: 1px solid $lightGrey;
+        background-color: #fff;
+        margin-right: 16px;
+      }
+    }
 
-        label{
-          font-weight: $fontBold;
-          display: block;
-          padding-bottom: $defaultIndent;
+    &:checked{
+      & + label{
+        &::before{
+          background: $green url("../img/checkbox-bg.png")no-repeat center;
         }
       }
     }
   }
+
+  &[type="radio"]{
+    display: none;
+  }
 }
+
+//checkbox wrap
+.checkbox-wrap{
+  padding: 30px 0;
+
+  .checkboxes{
+    padding-top: 30px;
+
+    .scrollbar-inner{
+      height: 150px;
+      flex-wrap: wrap;
+      padding-right: 20px;
+    }
+  }
+
+  .checkbox-group{
+    padding: 12px;
+    margin-right: 18px;
+
+    &:hover{
+      background-color: $xsLightGrey;
+    }
+
+    .icon{
+      margin-left: auto;
+    }
+  }
+}
+
 
 #add-links-modal{
   width: 1075px;
+
+  .checkbox-group{
+    width: 30%;
+  }
 }
+
+
+//range slider
+#custom-hadle{
+  top: 12px;
+
+  span{
+    position: absolute;
+    top: 150%;
+  }
+}
+
