--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,5 +1,65 @@
 // Component
 
+// Pre-loader
+#loading{
+  background-color: $orange;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  margin-top: 0px;
+  top: 0;
+  transition: opacity .3s linear, z-index .1s linear .3s;
+}
+#loading.hide{
+  z-index: -1;
+  opacity: 0;
+}
+
+#loading-center{
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+#loading-center-absolute {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 200px;
+  width: 200px;
+  margin-top: -100px;
+  margin-left: -100px;
+}
+#object{
+  width: 80px;
+  height: 80px;
+  background-color: #FFF;
+  -webkit-animation: animate 1s infinite ease-in-out;
+  animation: animate 1s infinite ease-in-out;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 60px;
+}
+@-webkit-keyframes animate {
+  0% { -webkit-transform: perspective(160px); }
+  50% { -webkit-transform: perspective(160px) rotateY(-180deg); }
+  100% { -webkit-transform: perspective(160px) rotateY(-180deg) rotateX(-180deg); }
+}
+
+@keyframes animate {
+  0% {
+    transform: perspective(160px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(160px) rotateX(0deg) rotateY(0deg);
+  } 50% {
+      transform: perspective(160px) rotateX(-180deg) rotateY(0deg);
+      -webkit-transform: perspective(160px) rotateX(-180deg) rotateY(0deg) ;
+    } 100% {
+        transform: perspective(160px) rotateX(-180deg) rotateY(-180deg);
+        -webkit-transform: perspective(160px) rotateX(-180deg) rotateY(-180deg);
+      }
+}
+
+
 // Title
 %title{
   color: $titleColor;
@@ -473,12 +533,34 @@ input{
 
 
 //range slider
-#custom-hadle{
-  top: 12px;
+#custom-handle{
+  top: 0;
+  width: 0;
+  height: 0;
+  border: 15px solid transparent;
+  border-bottom-color: $orangeLight;
+  background: transparent;
 
   span{
     position: absolute;
-    top: 150%;
+    top: 25px;
+    left: -25px;
   }
 }
 
+.dropdown-menu{
+  display: none;
+  position: absolute;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+  top: 100%;
+}
+.dropdown-wrap{
+  position: relative;
+  &:hover{
+    .dropdown-menu{
+      display: block;
+    }
+  }
+}
