начал делать дз1

--- a/src/scss/_default-classes.scss
+++ b/src/scss/_default-classes.scss
@@ -5,6 +5,50 @@
 .text-center{
   text-align: center;
 }
+// Color classes
+.black-bg{
+  background-color: #333;
+}
+.darkGrey-bg{
+  background-color: #979797;
+}
+.grey-bg{
+  background-color: #bababa;
+}
+.lightGrey-bg{
+  background-color: #e3e3e3;
+}
+.xsLightGrey-bg{
+  background-color: #f5f5f2;
+}
+.orange-bg{
+  background-color: #f58220;
+}
+.orangeLight-bg{
+  background-color: #ffa200;
+}
+.green-bg{
+  background-color: #04ae00;
+}
+.lightGreen-bg{
+  background-color: #74b67a;
+}
+.xsLightGreen-bg{
+  background-color: #96cc9b;
+}
+
+.red-bg{
+  background-color: #ff0000;
+}
+.pink-bg{
+  background-color: #de5252;
+}
+.lightPink-bg{
+  background-color: #ec7171;
+}
+.blue-bg{
+  background-color: #56819f;
+}
 
 //class position fixed
 .fixed-to-top{
