--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,10 +25,8 @@ $pink: #de5252;
 $lightPink: #ec7171;
 $blue: #56819f;
 
-//Default padding
-//$defaultPadding: 18px;
+//Default padding: 18px;
 $defaultIndent: 18px;
-
 
 // Component var
 
